--- a/options.html
+++ b/options.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>HN Options</title>
+  <title>Hacked News</title>
 
   <style>
 
@@ -43,7 +43,7 @@
 
   <div id="wrapper">
 
-    <!-- <h1>HN Options</h1> -->
+    <h1>Hacked News</h1>
 
     <div>
       <input id="new-window-articles" type="checkbox" name="new_window_articles" value="yes">
