use the chrome.tabs.create instead of window.open

--- a/options.html
+++ b/options.html
@@ -55,6 +55,11 @@
       <label for="new-window-comments">Open comments in a new window</label>
     </div>
 
+    <div>
+      <input id="open-in-background" type="checkbox" name="open_in_background" value="yes">
+      <label for="open-in-background">Open new windows in the background</label>
+    </div>
+
     <div id="status"></div>
   </div>
 
