--- a/options.html
+++ b/options.html
@@ -46,13 +46,13 @@
     <h1>Hacked News</h1>
 
     <div>
-      <input id="new-window-articles" type="checkbox" name="new_window_articles" value="yes">
-      <label for="new-window-articles">Open articles in a new window</label>
+      <input id="use-toolbar" type="checkbox" name="use_toolbar" value="yes">
+      <label for="use-toolbar">Use the toolbar</label>
     </div>
 
     <div>
-      <input id="new-window-comments" type="checkbox" name="new_window_comments" value="yes">
-      <label for="new-window-comments">Open comments in a new window</label>
+      <input id="new-window-articles" type="checkbox" name="new_window_articles" value="yes">
+      <label for="new-window-articles">Open articles in a new window</label>
     </div>
 
     <div>
@@ -60,9 +60,15 @@
       <label for="open-in-background">Open new windows in the background</label>
     </div>
 
+    <div>
+      <input id="viewtext" type="checkbox" name="viewtext" value="yes">
+      <label for="viewtext">View articles as text</label>
+    </div>
+
     <div id="status"></div>
   </div>
 
   <script src="options.js"></script>
+
 </body>
 </html>
