--- a/options.html
+++ b/options.html
@@ -62,7 +62,7 @@
 
     <div>
       <input id="viewtext" type="checkbox" name="viewtext" value="yes">
-      <label for="viewtext">View articles as text</label>
+      <label for="viewtext">View articles through ViewText.org</label>
     </div>
 
     <div id="status"></div>
