include number of votes in the toolbar

--- a/toolbar.html
+++ b/toolbar.html
@@ -79,7 +79,9 @@
       Hacker News
     </a>
     |
-    <a id="upvote" style="display:none" href="#">&#x25B2;</a>
+    <span id="points">1 point</span>
+    |
+    <a id="upvote" style="display:none" href="#">▲</a>
     <span id="title"></span>
     <span id="site"></span>
   </div>
