improved points regex

--- a/toolbar.html
+++ b/toolbar.html
@@ -79,13 +79,13 @@
       Hacker News
     </a>
     |
-    <span id="points">1 point</span>
-    |
     <a id="upvote" style="display:none" href="#">▲</a>
     <span id="title"></span>
     <span id="site"></span>
   </div>
   <div class="right">
+    <span id="points"></span>
+    |
     <a href="#" id="comments"><span id="no_comments"></span> comments</a>
     |
     <a href="#" id="viewtext">view text</a>
