--- a/toolbar.html
+++ b/toolbar.html
@@ -47,9 +47,8 @@
   }
 
   #upvote {
-    opacity: 0.5;
+    opacity: 0.6;
     color: #828282;
-    font-size: 75%;
   }
 
   #content {
@@ -78,12 +77,11 @@
       <img src="http://ycombinator.com/images/y18.gif" width="18" height="18">
       Hacker News
     </a>
-    |
-    <a id="upvote" style="display:none" href="#">▲</a>
     <span id="title"></span>
     <span id="site"></span>
   </div>
   <div class="right">
+    <a id="upvote" href="#" style="display:none">▲</a>
     <span id="points"></span>
     |
     <a href="#" id="comments"><span id="no_comments"></span> comments</a>
