updated toolbar links

--- a/toolbar.html
+++ b/toolbar.html
@@ -86,10 +86,10 @@
     |
     <a href="#" id="comments"><span id="no_comments"></span> comments</a>
     |
-    <a href="#" id="viewtext">view text</a>
-    <a href="#" id="original">view original</a>
+    <a href="#" id="viewtext">text</a>
+    <a href="#" id="original">original</a>
     |
-    <a href="#" id="close">close</a>
+    <a href="#" id="close">✖</a>
   </div>
 </div>
 
