removed viewtext.org integration in favour of a native readability based textview.

--- a/options.html
+++ b/options.html
@@ -48,6 +48,11 @@
     <div>
       <input id="use-toolbar" type="checkbox" name="use_toolbar" value="yes">
       <label for="use-toolbar">Use the toolbar</label>
+
+    <div>
+      <input id="viewtext" type="checkbox" name="viewtext" value="yes">
+      <label for="viewtext">Use text view by default</label>
+    </div>
     </div>
 
     <div>
@@ -58,11 +63,6 @@
     <div>
       <input id="open-in-background" type="checkbox" name="open_in_background" value="yes">
       <label for="open-in-background">Open new windows in the background</label>
-    </div>
-
-    <div>
-      <input id="viewtext" type="checkbox" name="viewtext" value="yes">
-      <label for="viewtext">View articles through ViewText.org</label>
     </div>
 
     <div id="status"></div>
