--- a/toolbar.html
+++ b/toolbar.html
@@ -8,6 +8,8 @@
 
 <meta charset="utf-8">
 
+<link rel="stylesheet" type="text/css" href="readability.css">
+
 <style>
 
   html, body {
@@ -51,13 +53,20 @@
     color: #828282;
   }
 
-  #content {
+  .content {
     border: 0;
     width: 100%;
     height: 100%%;
     bottom: 0;
     position: relative;
     top: 30px;
+  }
+
+  #readable {
+    font-family: serif;
+    color: #000;
+    font-size: 18px;
+    overflow: auto;
   }
 
   .left {
@@ -93,6 +102,8 @@
   </div>
 </div>
 
-<iframe id="content" name="content"></iframe>
+<iframe id="content" name="content" class="content" style="display:none"></iframe>
+<div id="readable" class="content" style="display:none"></div>
 
+<script src="readability.js"></script>
 <script src="toolbar.js"></script>
