--- a/toolbar.html
+++ b/toolbar.html
@@ -69,6 +69,21 @@
     overflow: auto;
   }
 
+  #readInner {
+    font-family: Palatino, Georgia, Times, 'Times New Roman';
+    font-size: 18px;
+    line-height: 25px;
+    text-align: justify;
+  }
+
+  #readInner h1 {
+    border-bottom: none;
+    font-size: 1.33em;
+    padding-bottom: 0.5em;
+    margin-bottom: 1em;
+    margin-top: 1.75em;
+  }
+
   .left {
     float: left;
   }
